--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
     height: 100%;
     width: 100%;
 }
+
+.leaBox {
+    width: 100px; 
+    height: 50px; 
+    border: 1px solid black;
+    background-color: white
+}
+
+.tableSuccess {
+    background-color: brown;
+    color: white;
+}
